# python-project-lvl3

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  e1-ru.html  hexlet-io-courses.html  pyproject.toml
.github/workflows/: python_project.yml  superlinter.yml
e1-ru_files/: x01-aidata-io-pixel.js
page_loader/: Logging.py  cli.py  core.py  dir_and_file.py  logging.py  logging_page_loader.py  naming.py  network.py  page_loader.py  storage.py  work_to_html.py  work_to_http.py
page_loader/scripts/: page_loader.py
tests/: test_naming.py  test_network.py  test_page_loader.py  test_storage.py
tests/fixtures/: except_html_1.html  sites  sites_html  sites_name
trash/: e1-ru.html
trash/e1-ru_files/: reklama-ngs-ru-dohcohT2.js  x01-aidata-io-pixel.js
