[tool.poetry]
name = "egrassa-page-loader"
version = "0.5.0"
description = "Programm for load html page to folder and open page from folder"
authors = ["egrassa <bacek90@mail.ru>"]
packages = [
    { include = "page_loader" }
]
repository = "https://github.com/xegrassa/python-project-lvl3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
argparse = "^1.4.0"
bs4 = "^0.0.1"
lxml = "^4.5.0"
Pillow = "^7.0.0"
progress = "^1.5"
requests-mock = "^1.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.3"
coverage = "^4.5"
pytest-cov = "^2.8"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:download"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

